@@ -162,3 +162,4 @@
  24-Sep-2019  V0.69 Add additional polymer_instance features and new polymer_instance_validations methods.
  25-Sep-2019  V0.70 Incorporate RCSB extensions in 'min' schemas add single collection specific identifiers core collections
                     Add missing required entry identifiers.
+ 25-Sep-2019  V0.71 Adjustments for edge cases and enums after full-load tests
